<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Sub_Level_Section">

    <TextView
        android:id="@+id/level_display_text"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="186dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/gm1"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:background="@drawable/sub_level_button"
            android:text="@string/game1" />

        <Button
            android:id="@+id/gm2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:background="@drawable/sub_level_button"
            android:text="@string/game2" />

        <Button
            android:id="@+id/gm3"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:background="@drawable/sub_level_button"
            android:text="@string/game3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/gm4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/sub_level_button"
            android:text="@string/game4" />

        <Button
            android:id="@+id/gm5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/sub_level_button"
            android:text="@string/game5" />

        <Button
            android:id="@+id/gm6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/sub_level_button"
            android:text="@string/game6" />
    </LinearLayout>

</LinearLayout>