<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00c853"
    android:orientation="vertical"
    tools:context=".GameOver">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="279dp"
        android:layout_height="57dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="#00B8D4"
        android:gravity="center"
        android:text="@string/congratulations"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        android:background="#99A6EA"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="179dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/your_score"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/score_view"
            android:layout_width="179dp"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="25sp"
            android:gravity="center"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        android:background="#EDD39D"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="179dp"
            android:layout_height="84dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/your_wrong_attempts"
            android:textSize="30sp"
            tools:layout_marginTop="25dp" />

        <TextView
            android:id="@+id/wattemp_view"
            android:layout_width="179dp"
            android:layout_height="81dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textSize="30sp"
            tools:layout_marginTop="25dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        android:background="#CD8E8C"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="179dp"
            android:layout_height="80dp"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/completion_time"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/second_view"
            android:layout_width="179dp"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="25sp"
            android:gravity="center_horizontal"
            android:textSize="30sp" />
    </LinearLayout>

    <Button
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_to_games" />

    <Button
        android:id="@+id/next_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next_game" />

</LinearLayout>